--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -26,6 +26,15 @@
   -->
   <title>Szakal 2.0</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L08E85T9VG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L08E85T9VG');
+</script>
 <body id="body">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
