Roll svg back cause gmail doesn't support it

--- a/backend/src/main/resources/email/contactNotification.html
+++ b/backend/src/main/resources/email/contactNotification.html
@@ -50,7 +50,7 @@
 <div class="content-wrapper">
     <div class="content">
         <div class="logo">
-            <img class="logo" src="https://${domainName}/szakal_logo.svg"/>
+            <img class="logo" src="https://${domainName}/szakal_logo.png"/>
         </div>
         <h4>${userName},</h4>
         <p>${text}</p>
