--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,9 @@
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-L08E85T9VG"></script>
+<script type="application/javascript">
+  var global = window;
+</script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
